Ticket #28604: Provided more commit messages to pre-defined commands.

--- a/com.top_logic.bpe.modeler/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.bpe.modeler/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.bpe.modeler.copy.I18NConstants.COPIED_WORKFLOW__FROM_TO = Copied workflow from "{0}" to "{1}".
 com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges = Apply BPMN structural changes
 com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges.tooltip = <i>Command</i> saving the current changes in an <i>BPML editor</i>.
 com.top_logic.bpe.modeler.component.BPMLEditor = BPML editor
