--- a/com.top_logic.graph.diagramjs.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graph.diagramjs.server/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.graph.diagramjs.server.I18NConstants.CHANGED_INHERITANCE__CLASS = Changed inheritance hierarchy of "{0}".
 com.top_logic.graph.diagramjs.server.DiagramJSGraphComponent = Diagram JavaScript graph component
 com.top_logic.graph.diagramjs.server.DiagramJSGraphComponent.Config.createEnumerationDialogName = Create enumeration dialog name
 com.top_logic.graph.diagramjs.server.DiagramJSGraphComponent.Config.createEnumerationFormName = Create enumeration form name
