--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -1,6 +1,7 @@
 class.com.top_logic.base.accesscontrol.I18NConstants.APP_BUZZY_CLOSE = Close
 class.com.top_logic.base.accesscontrol.I18NConstants.APP_BUZZY_RELOAD = Reload
 class.com.top_logic.base.accesscontrol.I18NConstants.APP_BUZZY__NAME = The application {0} is buzzy. Please wait a moment and then try reloading the page.
+class.com.top_logic.base.accesscontrol.I18NConstants.CHANGED_PASSWORD__USER = User changed password: {0}
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_CONFIRM = Confirm password
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_CRITERIA_LOWER = Lower case characters (a-b)
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_CRITERIA_NUMBER = Numbers (0-9)
@@ -21,8 +22,11 @@ class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_SUBMIT = Save an
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_TITLE = Password change required
 class.com.top_logic.base.accesscontrol.I18NConstants.PWD_CHANGE_WELCOME__USER = Welcome {0}!
 class.com.top_logic.base.search.I18NConstants.SEARCH_STRING_SYNTAX_ERROR_UNCLOSED_PHRASE__PHRASE_INPUT = Illegal search string. The phrase ''{0}'' in input ''{1}'' is not closed.
+class.com.top_logic.base.security.password.I18NConstants.UPDATED_PASSWORD_HASH__USER = Updated password hash for user: {0}
 class.com.top_logic.base.services.I18NConstants.STARTED_CURRENCY_SYSTEM = Started currency system.
 class.com.top_logic.common.folder.ui.I18NConstants.NO_FOLDER_AVAILABLE = No folder available.
+class.com.top_logic.common.webfolder.ui.clipboard.I18NConstants.ADDED_TO_CLIPBOARD__MODEL = Added to clipboard: {0}
+class.com.top_logic.common.webfolder.ui.clipboard.I18NConstants.REMOVED_FROM_CLIPBOARD__MODEL = Removed from clipboard: {0}
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPDATE_DIALOG_FILE = File
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPDATE_DIALOG_FILE.tooltip = Select new version of file. The file selected must have the same name as the file to update.
 class.com.top_logic.common.webfolder.ui.commands.I18NConstants.UPLOAD_DIALOG_FILES = Files
@@ -67,7 +71,11 @@ class.com.top_logic.knowledge.service.I18NConstants.SYNTHESIZED_COMMIT_DURING_RE
 class.com.top_logic.knowledge.service.db2.I18NConstants.ACCESS_TO_IMMUTABLE_CONTEXT__ARGS = Illegal modification access. Currently no changes are allowed. Arguments: {0}
 class.com.top_logic.knowledge.service.db2.I18NConstants.DELETE_FAILED_REFERER_HAS_VETO__ITEMS_REFERERS = One of the objects {0} could not be deleted, because it is used by the following objects: {1}
 class.com.top_logic.knowledge.service.db2.I18NConstants.NESTED_TRANSACTION_ROLLED_BACK__COMMIT_REASON = Nested transaction {1} rolled back: {2}
+class.com.top_logic.knowledge.service.migration.I18NConstants.PERFORMED_STARTUP_ACTION__NAME = Performed startup action: {0}
 class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSON_TABLE_DEFINITION_EXPECTED__ACTUAL_EXPECTED = Error: A definition for the application type "{1}" is expected, but a definition for "{0}" was given.
+class.com.top_logic.knowledge.wrap.person.I18NConstants.CREATED_ROOT_ACCOUNT = Created root account.
+class.com.top_logic.knowledge.wrap.person.I18NConstants.RESETTING_ROOT_PASSWORD = Resetting password of root account.
+class.com.top_logic.knowledge.wrap.person.I18NConstants.STORED_PERSONAL_CONFIGURATION__USER = Stored personal configuration for user "{0}".
 class.com.top_logic.knowledge.wrap.person.I18NConstants.UPDATED_ACCOUNT_LIST = Updated account list.
 class.com.top_logic.layout.I18NConstants.ERROR_TARGET_CONTROL_NOT_FOUND__ID_CMD_ARGS = Target control {0} not found delivering command "{1}" arguments: {2}
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = The object {0} is not a group.
@@ -76,6 +84,7 @@ class.com.top_logic.layout.basic.I18NConstants.FAILED_TO_COMPUTE_STATE__MSG = Fa
 class.com.top_logic.layout.component.I18NConstants.NEW_LAYOUT = The view was newly created. To remove the view use "delete view".
 class.com.top_logic.layout.component.I18NConstants.NO_PERSONAL_LAYOUT = The view has not been locally modified.
 class.com.top_logic.layout.currency.I18NConstants.ERROR_NO_SUCH_CURRENCY__VALUE = No such currency: {0}
+class.com.top_logic.layout.editor.commands.I18NConstants.CREATED_COMPONENT__NAME = Created component: {0}
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.GROUP_NOT_COLLAPSIBLE = The group can not be collapsed.
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.TOGGLE = Expand or collapse.
 class.com.top_logic.layout.form.component.I18NConstants.CREATED__MODEL = Created object: {0}
@@ -165,6 +174,8 @@ class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_N
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME_AVAILABLE = The property {1} is not defined on {0}. Available properties are: {2}
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE = Opening the window failed.
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE.tooltip = The expansion of template "{0}" failed.
+class.com.top_logic.mig.html.layout.I18NConstants.CONFIGURED_COMPONENT__NAME = Configured component "{0}".
+class.com.top_logic.mig.html.layout.I18NConstants.DELETED_FORM__COMPONENT = Deleted form of "{0}".
 class.com.top_logic.mig.html.layout.I18NConstants.DUPLICATE_CHANNEL_NAME__NAME = There is already a channel with name {0}.
 class.com.top_logic.mig.html.layout.I18NConstants.OUTER_REFERENCES_DELETION_ERROR__LAYOUTS = Component cannot be deleted because outer components reference it: {0}
 class.com.top_logic.mig.html.layout.I18NConstants.STORE_FOR_MODEL = Would you like to set the form as the standard form of this type? <p> Note: The standard form for a type is stored as annotation at the type, not within the displaying component. Updating the standard form of a type updates all forms displaying that type that does not define a specialized form. </p>
@@ -234,12 +245,14 @@ class.com.top_logic.util.monitor.I18NConstants.SYSTEM_ENVIRONMENT_VM_ARGUMENTS =
 class.com.top_logic.util.sched.I18NConstants.CLEANED_GLOBAL_TASK_LOG__TASK = Cleaned task log of global task: {0}.
 class.com.top_logic.util.sched.I18NConstants.CLEANED_TASK_LOG__TASK = Cleaned task log: {0}
 class.com.top_logic.util.sched.I18NConstants.CLEARED_CLUSTER_LOCK__TASK = Cleared cluster lock for task: {0}
+class.com.top_logic.util.sched.I18NConstants.CLUSER_TASK_CLEANUP = Cleaned up died custer-global tasks.
 class.com.top_logic.util.sched.I18NConstants.COMPRESSED_TASK_RESULT_LIST__TASK = Compressed task result list: {0}
 class.com.top_logic.util.sched.I18NConstants.CREATED_TASK__TASK = Created task: {0}
 class.com.top_logic.util.sched.I18NConstants.REQUESTED_CLUSTER_LOCK_FOR__TASK = Requested cluster lock for task: {0}.
 class.com.top_logic.util.sched.I18NConstants.STARTED_TASK__TASK = Started task: {0}
 class.com.top_logic.util.sched.I18NConstants.TASK_CANCELED__TASK = Task canceled: {0}
 class.com.top_logic.util.sched.I18NConstants.TASK_FINISHED__TASK = Task finished: {0}
+class.com.top_logic.util.sched.layout.I18NConstants.RELEASED_CLUSTER_LOCK__TASK = Released cluster lock for task: {0}
 com.top_logic.base.accesscontrol.ApplicationPages$Config = Configuration
 com.top_logic.base.accesscontrol.ApplicationPages$Config.tooltip = Global pages configuration options.
 com.top_logic.base.accesscontrol.ApplicationPages.Config.buzzyPage = Buzzy page
@@ -2624,6 +2637,8 @@ com.top_logic.layout.component.UpdateCommandHandler = Update command handler
 com.top_logic.layout.component.UpdateCommandHandler.tooltip = The <i>update command handler</i> updates an <i>updatable</i> with special care for <i>form component</i>. Compare with <i>filter refreshable</i> / <i>filter refresh command handler</i>
 com.top_logic.layout.component.WithCloseDialog.closeDialog = Close dialog
 com.top_logic.layout.component.WithCloseDialog.closeDialog.tooltip = Whether to close the dialog in which the component is displayed, this handler operates on. <p> If the handler's component is not displayed in a dialog, this setting has no effect. </p>
+com.top_logic.layout.component.WithCommitMessage.commitMessage = Commit message
+com.top_logic.layout.component.WithCommitMessage.commitMessage.tooltip = The message to annotate to the performed change. <p> If not set, a default commit message is derived from the command label and the target model. </p> <p> A message may contain the placeholder '{0}' that is replaced with the label of the target model. </p>
 com.top_logic.layout.component.configuration.AbstractCommandModelConfiguration = Command model configuration
 com.top_logic.layout.component.configuration.AbstractCommandModelConfiguration.Config.commandArguments = Command arguments
 com.top_logic.layout.component.configuration.AbstractCommandModelConfiguration.Config.commandArguments.tooltip = Static arguments for the command.
