--- a/com.top_logic.bpe.modeler/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.bpe.modeler/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.bpe.modeler.copy.I18NConstants.COPIED_WORKFLOW__FROM_TO = Workflow von "{0}" nach "{1}" kopiert.
 com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges = BPMN-Strukturänderungen anwenden
 com.top_logic.bpe.modeler.component.ApplyBPMNStructuralChanges.tooltip = <i>Befehl</i> zum Speichern der aktuellen Änderungen in einem <i>BPML-Editor</i>.
 com.top_logic.bpe.modeler.component.BPMLEditor = BPML-Editor
