--- a/com.top_logic.graph.diagramjs.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.graph.diagramjs.server/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,4 @@
+class.com.top_logic.graph.diagramjs.server.I18NConstants.CHANGED_INHERITANCE__CLASS = Vererbungshierarchie von "{0}" geändert.
 com.top_logic.graph.diagramjs.server.DiagramJSGraphComponent = Diagramm-JavaScript-Diagramm-Komponente
 com.top_logic.graph.diagramjs.server.DiagramJSGraphComponent.Config.createEnumerationDialogName = Name des Aufzählungsdialogs erstellen
 com.top_logic.graph.diagramjs.server.DiagramJSGraphComponent.Config.createEnumerationFormName = Aufzählungsformularname erstellen
