Ticket #28604: Provided more commit messages to pre-defined commands.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -52,7 +52,9 @@ class.com.top_logic.model.search.providers.I18NConstants.ERROR_SCRIPT_DELIVERED_
 class.com.top_logic.model.search.providers.I18NConstants.NEW_LINE = New row
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_EXECUTING_SEARCH__EXPR = Error when executing the script.
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_NO_SEARCH_EXPRESSION = No search expression selected.
+class.com.top_logic.model.search.ui.I18NConstants.EXECUTED_CUSTOM_SCRIPT__SCRIPT = Executed custom script: {0}
 class.com.top_logic.model.search.ui.I18NConstants.MODEL_SEARCH_PARSE_ERROR = Not valid TL-Script expression
+class.com.top_logic.model.search.ui.selector.I18NConstants.DELETED_STORED_SEARCH__NAME = Deleted stored search: {0}
 class.com.top_logic.model.search.ui.selector.I18NConstants.EXECUTING_STORED_QUERY_FAILED = Executing the stored query failed
 com.top_logic.model.search.ModelBasedSearch = Model based search
 com.top_logic.model.search.ModelBasedSearch$SearchConfig = Search configuration
@@ -1122,8 +1124,6 @@ com.top_logic.model.search.providers.TransactionHandlerByExpression.UIOptions.au
 com.top_logic.model.search.providers.TransactionHandlerByExpression.UIOptions.auto-apply.tooltip = Whether to automatically apply the user inputs in the form fields to the edited model underlying the form. <p> When not checked, the <i>Operation</i> is responsible for transferring values from the given form object to the underlying model. </p> <p> When checked and the form was constructed in create-mode, a new object of the requested type is automatically created, filled with user input from the form and passed as underlying model to the <i>Operation</i>. </p>
 com.top_logic.model.search.providers.TransactionHandlerByExpression.UIOptions.check-form = Check form
 com.top_logic.model.search.providers.TransactionHandlerByExpression.UIOptions.check-form.tooltip = Whether to check the form for errors before attempting to execute the operation. <p> This should be activated, whenever auto-apply of the form is enabled. </p>
-com.top_logic.model.search.providers.TransactionHandlerByExpression.UIOptions.commit-message = Commit message
-com.top_logic.model.search.providers.TransactionHandlerByExpression.UIOptions.commit-message.tooltip = The message to annotate to the performed change with. <p> If not set, a default commit message is derived from the command label and the target model. </p> <p> A message may contain the placeholder '{0}' that is replaced with the label of the target model. </p>
 com.top_logic.model.search.providers.TransactionHandlerByExpression.UIOptions.operation = Operation
 com.top_logic.model.search.providers.TransactionHandlerByExpression.UIOptions.operation.tooltip = The operation to execute. <p> Expected is a function taking three arguments. The first argument is the transient form object providing the user input in its attributes. The second argument is the context model of the command. The last argument is the model being created or edited (in a create form, a model is only created automatically, if <i>Auto apply</i> is active, otherwise <code>null</code> is passed). </p> <p> If the function produces some result, this result is passed to the configured post create actions. For example, this allows to select an object that was created within the transaction. </p> <p> When operating on a persistent object, a transaction must be performed, when this operation modifies the model (by e.g. storing value entered in the form). Another use case is to modify the form values being displayed e.g. to provide some custom defaults for another transaction on the same form. </p>
 com.top_logic.model.search.providers.TransactionHandlerByExpression.UIOptions.transaction = Transaction
