Ticket #28604: Added missing I18N.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -49,6 +49,7 @@ class.com.top_logic.model.search.providers.I18NConstants.CREATE_OBJECT_DEFAULT_L
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_MODE__VALUE_OPTIONS = Ungültiger Feldmodus "{0}", mögliche Werte sind: {1}
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_NO_TLOBJECT_FORM_MODEL__FORM = Das Modell eines Formulars muss eine modellierte Instanz (TLObject) sein, war aber: {0}
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_SCRIPT_DELIVERED_NO_RESULT_FOR_MANDATORY_ARRTIBUTE__ATTR_OBJ = Das Berechnungsergebnis des verpflichtenden Attributs "{0}" ist für das Objekt "{1}" leer.
+class.com.top_logic.model.search.providers.I18NConstants.EXECUTED_TABLE_COMMAND__LABEL = Tabellenbefehl ausgeführt: {0}
 class.com.top_logic.model.search.providers.I18NConstants.NEW_LINE = Neue Zeile
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_EXECUTING_SEARCH__EXPR = Fehler beim Ausführen des Skripts.
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_NO_SEARCH_EXPRESSION = Es wurde keine Suchausdruck ausgewählt.
