--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -49,6 +49,7 @@ class.com.top_logic.model.search.providers.I18NConstants.CREATE_OBJECT_DEFAULT_L
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_MODE__VALUE_OPTIONS = Invalid field mode "{0}", possible values are: {1}
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_NO_TLOBJECT_FORM_MODEL__FORM = The model of a form must be a modeled instance (TLObject), but was: {0}
 class.com.top_logic.model.search.providers.I18NConstants.ERROR_SCRIPT_DELIVERED_NO_RESULT_FOR_MANDATORY_ARRTIBUTE__ATTR_OBJ = The calculation result of the mandatory attribute "{0}" is empty for object "{1}".
+class.com.top_logic.model.search.providers.I18NConstants.EXECUTED_TABLE_COMMAND__LABEL = Executed table command: {0}
 class.com.top_logic.model.search.providers.I18NConstants.NEW_LINE = New row
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_EXECUTING_SEARCH__EXPR = Error when executing the script.
 class.com.top_logic.model.search.ui.I18NConstants.ERROR_NO_SEARCH_EXPRESSION = No search expression selected.
