Ticket #28604: Also extract implicit changes to make reverting easier.

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
@@ -1,7 +1,11 @@
 model.tl.changelog = Änderungshistorie
 model.tl.changelog.Change = Änderung
+model.tl.changelog.Change.implicit = Implizit
+model.tl.changelog.Change.implicit.tooltip = Ob die Änderung bei einer Erzeugung oder Löschung implizit ist, weil das Objekt Teil eines anderen Objektes ist, das in derselben Transaktion angelegt oder gelöscht wurde.\ 
 model.tl.changelog.Change.object = Objekt
 model.tl.changelog.Change.object.tooltip = Das Objekt, dessen Eigenschaften verändert wurden.
+model.tl.changelog.Change.oldObject = Vergleichsobjekt
+model.tl.changelog.Change.oldObject.tooltip = Der alte Stand eines geänderten Objekts. Die Originalwerte der in der Änderung aktualisierten Eigenschaften lassen sich aus diesem Stand auslesen.
 model.tl.changelog.Change.tooltip = Eine atomare Änderung, welche die Veränderung beschreibt, die an einem Objekt vorgenommen wurde. Eine solche Veränderung kann die Erzeugung, Löschung oder die Änderung von Eigenschaften des Objektes sein.
 model.tl.changelog.ChangeSet = Change-Set
 model.tl.changelog.ChangeSet.author = Author
