--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
@@ -1,7 +1,11 @@
 model.tl.changelog = Changelog
 model.tl.changelog.Change = Change
+model.tl.changelog.Change.implicit = Implicit
+model.tl.changelog.Change.implicit.tooltip = Whether the change is implicit in a creation or deletion because the object is part of another object that was created or deleted in the same transaction.\ 
 model.tl.changelog.Change.object = Object
 model.tl.changelog.Change.object.tooltip = The object whose properties have been changed.
+model.tl.changelog.Change.oldObject = Comparison object
+model.tl.changelog.Change.oldObject.tooltip = The old status of a changed object. The original values of the properties updated in the change can be read from this status.
 model.tl.changelog.Change.tooltip = An atomic change that describes the change that has been made to an object. Such a change can be the creation, deletion or modification of properties of the object.
 model.tl.changelog.ChangeSet = Change set
 model.tl.changelog.ChangeSet.author = Author
