Ticket #28604: Implemented revert.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,10 @@
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING = Werte, die auf die Eigenschaft{1}" des Objekts{0}" gesetzt wurden, sind nicht mehr verfügbar (inzwischen gelöscht): {2}
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_CREATE_ALREADY_EXISTS__OBJ = Das Objekt, das erstellt werden soll, existiert bereits: {0}
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_DELETE_NO_LONGER_EXISTS__OBJ = Das Objekt, das gelöscht werden sollte, existiert nicht mehr: {0}
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_MODIFY_NO_LONGER_EXISTS__OBJ = Das Objekt, das geändert werden sollte, existiert nicht mehr: {0}
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_VALUE_CHANGED_IN_BETWEEN__OBJ_PART_ORIG_CURR = Die Eigenschaft{1}" des Objekts{0}" wurde zwischenzeitlich von ihrem ursprünglichen Wert{2}" auf den neuen Wert{3}" geändert.
+class.com.top_logic.element.changelog.model.I18NConstants.REDO__MSG = Erneut durchgeführt: {0}
+class.com.top_logic.element.changelog.model.I18NConstants.REVERTED__MSG = Rückgängig gemachte Änderung: {0}
 class.com.top_logic.element.i18n.I18NConstants.I18N_PROXY_FIELD_LABEL__FIELD = Stellvertreter für {0}
 class.com.top_logic.element.layout.formeditor.I18NConstants.CONFIGURE_FORM_DEFINITION_COMMAND = Formular gestalten
 class.com.top_logic.element.layout.formeditor.I18NConstants.CONFIGURE_FORM_DEFINITION_COMMAND.tooltip = Öffnet den Formular-Editor für den Typ des aktuell angezeigten Objekts. <p> Wenn für den Typ des angezeigten Objekts bereits eine Formulardefinition existiert, wird diese bearbeitet. Andernfalls wird eine neue Formulardefinition für den Typ des angezeigten Objekts erstellt. </p> <p> Die Formulardefinition kann entweder lokal in diesem Formular definiert oder mit einer Annotation an den Objekttyp versehen werden. Wenn Sie eine Formulardefinition bearbeiten, die mit einem Objekttyp annotiert ist, haben Sie die Möglichkeit, das bearbeitete Formular anschließend lokal in dieser Komponente zu speichern. </p>
