--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
@@ -1,12 +1,19 @@
 model.tl.changelog = Änderungshistorie
 model.tl.changelog.Change = Änderung
+model.tl.changelog.Change.belongsTo = Gehört zu
+model.tl.changelog.Change.belongsTo.tooltip = Die Änderung des Containers des geänderten Objektes. Nur gesetzt, wenn der Container ebenfalls geändert wurde.
 model.tl.changelog.Change.implicit = Implizit
 model.tl.changelog.Change.implicit.tooltip = Ob die Änderung bei einer Erzeugung oder Löschung implizit ist, weil das Objekt Teil eines anderen Objektes ist, das in derselben Transaktion angelegt oder gelöscht wurde.\ 
 model.tl.changelog.Change.object = Objekt
 model.tl.changelog.Change.object.tooltip = Das Objekt, dessen Eigenschaften verändert wurden.
 model.tl.changelog.Change.oldObject = Vergleichsobjekt
 model.tl.changelog.Change.oldObject.tooltip = Der alte Stand eines geänderten Objekts. Die Originalwerte der in der Änderung aktualisierten Eigenschaften lassen sich aus diesem Stand auslesen.
+model.tl.changelog.Change.partChanges = Teiländerungen
+model.tl.changelog.Change.partChanges.tooltip = Änderungen, an Objekten, die Teile des in dieser Änderung modifizierten Objektes sind.
 model.tl.changelog.Change.tooltip = Eine atomare Änderung, welche die Veränderung beschreibt, die an einem Objekt vorgenommen wurde. Eine solche Veränderung kann die Erzeugung, Löschung oder die Änderung von Eigenschaften des Objektes sein.
+model.tl.changelog.ChangeConfirmation = Bestätigung
+model.tl.changelog.ChangeConfirmation.info = Info
+model.tl.changelog.ChangeConfirmation.tooltip = Hinweis zu einer Operation, bei der der Anwender eine Entscheidung treffen muss.
 model.tl.changelog.ChangeSet = Change-Set
 model.tl.changelog.ChangeSet.author = Author
 model.tl.changelog.ChangeSet.changes = Änderungen
@@ -14,17 +21,50 @@ model.tl.changelog.ChangeSet.date = Datum
 model.tl.changelog.ChangeSet.message = Message
 model.tl.changelog.ChangeSet.revision = Revision
 model.tl.changelog.ChangeSet.tooltip = Ein Change-Set fasst alle Änderungen zusammen, die in einer Transaktion vorgenommen wurden. Typischerweise führt eine Aktion im System höchstens eine Transaktion durch. Damit beschreibt ein Change-Set die Änderungen, die von einer atomaren Systemoperation durchgeführt wurden.
+model.tl.changelog.CreateOp = Objektanlage
+model.tl.changelog.CreateOp.id = Id
+model.tl.changelog.CreateOp.initializers = Initializers
+model.tl.changelog.CreateOp.tooltip = Die Objektanlage beschreibt ein neu zu erstellendes Objekt. Jede vom Standardwert abweichende Eigenschaft ist wird durch eine eigene Zuweisungsoperation beschrieben.
+model.tl.changelog.CreateOp.type = Type
 model.tl.changelog.Creation = Erzeugung
 model.tl.changelog.Creation.tooltip = Ein Objekt wurde angelegt. Die Erzeugung referenziert das angelegte Objekt nach der Änderung. Die Erzeugung beschreibt das angelegte Objekt als ganzes inklusive aller Eigenschaften des Objektes und aller über Kompositionsreferenzen referenzierten Teile.
+model.tl.changelog.DeleteOp = Löschoperation
+model.tl.changelog.DeleteOp.target = Target
+model.tl.changelog.DeleteOp.tooltip = Die Löschung eines bestehenden Objektes.
 model.tl.changelog.Deletion = Löschung
 model.tl.changelog.Deletion.tooltip = Eine Löschung bezieht sich auf das gelöschte Objekt vor der Änderung. Eine Löschung steht für die Löschung des Objektes selbst und aller seiner über Kompositionsreferenzen referenzierten Teile.
+model.tl.changelog.ErrorAction = Error action
+model.tl.changelog.ErrorAction.IGNORE = Ignorieren
+model.tl.changelog.ErrorAction.IGNORE.tooltip = Die Operation überspringen und den Fehler ignorieren.\ 
+model.tl.changelog.ErrorMessage = Fehlermeldung
+model.tl.changelog.ErrorMessage.action = Action
+model.tl.changelog.ErrorMessage.tooltip = Die Operation kann nicht durchgeführt werden. Wenn der Fehler ignoriert wird, können die verbleibenden Operationen möglicherweise trotzdem durchgeführt werden.
 model.tl.changelog.Modification = Modification
 model.tl.changelog.Modification.newValue = New value
 model.tl.changelog.Modification.oldValue = Old value
 model.tl.changelog.Modification.part = Eigenschaft
 model.tl.changelog.Modification.part.tooltip = Die Eigenschaft, deren Wert sich verändert hat.
 model.tl.changelog.Modification.tooltip = Die Änderung an einer einzelnen Eigenschaft eines Objektes.
+model.tl.changelog.Operation = Operation
+model.tl.changelog.Operation.confirmations = Confirmations
+model.tl.changelog.Operation.tooltip = Eine Änderung am Modell der Anwendung. Eine Änderung kann dem Nutzer angezeigt und zur Bestätigung vorgelegt werden, bevor diese ausgeführt wird.\ 
+model.tl.changelog.SetOp = Zuweisungsoperation
+model.tl.changelog.SetOp.property = Property
+model.tl.changelog.SetOp.tooltip = Eine Zuweisung setzt den Wert einer Eigenschaft.
+model.tl.changelog.SetOp.value = Value
 model.tl.changelog.Update = Änderung
 model.tl.changelog.Update.modifications = Eigenschaftsänderungen
 model.tl.changelog.Update.tooltip = Eine Änderung beschreibt die Veränderung von Eigenschaften eines bestehenden Objektes. Die Änderung bezieht sich auf den Originalzustand des Objektes vor der Änderung.
+model.tl.changelog.UpdateOp = Bearbeitungsoperation
+model.tl.changelog.UpdateOp.target = Target
+model.tl.changelog.UpdateOp.tooltip = Eine Bearbeitung weist einer Eigenschaft eines Objektes einen neuen Wert zu.\ 
+model.tl.changelog.UpdateOp.updates = Updates
+model.tl.changelog.WarningAction = Warning action
+model.tl.changelog.WarningAction.IGNORE = Ignorieren
+model.tl.changelog.WarningAction.IGNORE.tooltip = Aktion trotz der Warnung durchführen.
+model.tl.changelog.WarningAction.SKIP = Überspringen
+model.tl.changelog.WarningAction.SKIP.tooltip = Diese Operation überspringen.
+model.tl.changelog.WarningMessage = Warnhinweis
+model.tl.changelog.WarningMessage.action = Action
+model.tl.changelog.WarningMessage.tooltip = Die Operation liefert möglicherweise nicht das erwartete Ergebnis. Die Warnung kann entweder inoriert und die Operation trotzdem durchgeführt werden, oder die Operation kann übersprungen werden um andere Operationen möglicherweise dennoch ausführen zu können.\ 
 model.tl.changelog.tooltip = Die Änderungshistorie beschreibt Änderungen, die an den Daten einer Anwendung vorgenommen wurden.
