--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
@@ -1,12 +1,19 @@
 model.tl.changelog = Changelog
 model.tl.changelog.Change = Change
+model.tl.changelog.Change.belongsTo = Belongs to
+model.tl.changelog.Change.belongsTo.tooltip = The change to the container of the changed object. Only set if the container has also been changed.
 model.tl.changelog.Change.implicit = Implicit
 model.tl.changelog.Change.implicit.tooltip = Whether the change is implicit in a creation or deletion because the object is part of another object that was created or deleted in the same transaction.\ 
 model.tl.changelog.Change.object = Object
 model.tl.changelog.Change.object.tooltip = The object whose properties have been changed.
 model.tl.changelog.Change.oldObject = Comparison object
 model.tl.changelog.Change.oldObject.tooltip = The old status of a changed object. The original values of the properties updated in the change can be read from this status.
+model.tl.changelog.Change.partChanges = Part changes
+model.tl.changelog.Change.partChanges.tooltip = Changes to objects that are parts of the object modified in this change.
 model.tl.changelog.Change.tooltip = An atomic change that describes the change that has been made to an object. Such a change can be the creation, deletion or modification of properties of the object.
+model.tl.changelog.ChangeConfirmation = Bestätigung
+model.tl.changelog.ChangeConfirmation.info = Info
+model.tl.changelog.ChangeConfirmation.tooltip = Note on an operation where the user must make a decision.
 model.tl.changelog.ChangeSet = Change set
 model.tl.changelog.ChangeSet.author = Author
 model.tl.changelog.ChangeSet.changes = Changes
@@ -14,17 +21,50 @@ model.tl.changelog.ChangeSet.date = Date
 model.tl.changelog.ChangeSet.message = Message
 model.tl.changelog.ChangeSet.revision = Revision
 model.tl.changelog.ChangeSet.tooltip = A change set summarizes all changes that were made in a transaction. Typically, an action in the system performs at most one transaction. A change set therefore describes the changes made by an atomic system operation.
+model.tl.changelog.CreateOp = Object instantiation
+model.tl.changelog.CreateOp.id = Id
+model.tl.changelog.CreateOp.initializers = Initializers
+model.tl.changelog.CreateOp.tooltip = The object creation describes a new object to be created. Each property that differs from the default value is described by a separate assignment operation.
+model.tl.changelog.CreateOp.type = Type
 model.tl.changelog.Creation = Creation
 model.tl.changelog.Creation.tooltip = An object has been created. The creation references the created object after the change. The creation describes the created object as a whole, including all properties of the object and all parts referenced via composition references.
+model.tl.changelog.DeleteOp = Delete operation
+model.tl.changelog.DeleteOp.target = Target
+model.tl.changelog.DeleteOp.tooltip = The deletion of an existing object.
 model.tl.changelog.Deletion = Deletion
 model.tl.changelog.Deletion.tooltip = A deletion refers to the deleted object before the change. A deletion refers to the deletion of the object itself and all its parts referenced via composition references.
+model.tl.changelog.ErrorAction = Error action
+model.tl.changelog.ErrorAction.IGNORE = Ignore
+model.tl.changelog.ErrorAction.IGNORE.tooltip = Skip the operation and ignore the error.\ 
+model.tl.changelog.ErrorMessage = Error message
+model.tl.changelog.ErrorMessage.action = Action
+model.tl.changelog.ErrorMessage.tooltip = The operation cannot be performed. If the error is ignored, the remaining operations may still be performed.
 model.tl.changelog.Modification = Modification
 model.tl.changelog.Modification.newValue = New value
 model.tl.changelog.Modification.oldValue = Old value
 model.tl.changelog.Modification.part = Property
 model.tl.changelog.Modification.part.tooltip = The property whose value has changed.
 model.tl.changelog.Modification.tooltip = The change to a single property of an object.
+model.tl.changelog.Operation = Operation
+model.tl.changelog.Operation.confirmations = Confirmations
+model.tl.changelog.Operation.tooltip = A change to the application model. A change can be displayed to the user and submitted for confirmation before it is executed.\ 
+model.tl.changelog.SetOp = Assignment operation
+model.tl.changelog.SetOp.property = Property
+model.tl.changelog.SetOp.tooltip = An assignment sets the value of a property.
+model.tl.changelog.SetOp.value = Value
 model.tl.changelog.Update = Update
 model.tl.changelog.Update.modifications = Property modifications
 model.tl.changelog.Update.tooltip = A change describes the modification of properties of an existing object. The change refers to the original state of the object before the change.
+model.tl.changelog.UpdateOp = Edit operation
+model.tl.changelog.UpdateOp.target = Target
+model.tl.changelog.UpdateOp.tooltip = An edit assigns a new value to a property of an object.\ 
+model.tl.changelog.UpdateOp.updates = Updates
+model.tl.changelog.WarningAction = Warning action
+model.tl.changelog.WarningAction.IGNORE = Ignore
+model.tl.changelog.WarningAction.IGNORE.tooltip = Carry out the action despite the warning.
+model.tl.changelog.WarningAction.SKIP = Skip
+model.tl.changelog.WarningAction.SKIP.tooltip = Skip this operation.
+model.tl.changelog.WarningMessage = Warning message
+model.tl.changelog.WarningMessage.action = Action
+model.tl.changelog.WarningMessage.tooltip = The operation may not deliver the expected result. The warning can either be ignored and the operation carried out anyway, or the operation can be skipped so that other operations can still be carried out.\ 
 model.tl.changelog.tooltip = The change log describes changes that have been made to the data of an application.
