Ticket #28604: Implemented revert.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -87,7 +87,7 @@ class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSO
 class.com.top_logic.knowledge.util.I18NConstants.TASK_STARTED__TASK = Aufgabe gestartet: {0}
 class.com.top_logic.knowledge.wrap.person.I18NConstants.CREATED_ROOT_ACCOUNT = Root-Konto erstellt.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.RESETTING_ROOT_PASSWORD = Passworts für das Root-Konto zurückgesetzt.
-class.com.top_logic.knowledge.wrap.person.I18NConstants.STORED_PERSONAL_CONFIGURATION__USER = Gespeicherte persönliche Konfiguration für Benutzer{0}".
+class.com.top_logic.knowledge.wrap.person.I18NConstants.STORED_PERSONAL_CONFIGURATION = Persönliche Konfiguration gespeichert.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.UPDATED_ACCOUNT_LIST = Benutzerkonten aktualisiert.
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = Das Objekt {0} ist keine Gruppe.
 class.com.top_logic.layout.component.I18NConstants.DELETED_OBJECT__OBJ = Objekt gelöscht: {0}
