--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -87,7 +87,7 @@ class.com.top_logic.knowledge.service.migration._27517.I18NConstants.ERROR_PERSO
 class.com.top_logic.knowledge.util.I18NConstants.TASK_STARTED__TASK = Task started: {0}
 class.com.top_logic.knowledge.wrap.person.I18NConstants.CREATED_ROOT_ACCOUNT = Created root account.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.RESETTING_ROOT_PASSWORD = Resetting password of root account.
-class.com.top_logic.knowledge.wrap.person.I18NConstants.STORED_PERSONAL_CONFIGURATION__USER = Stored personal configuration for user "{0}".
+class.com.top_logic.knowledge.wrap.person.I18NConstants.STORED_PERSONAL_CONFIGURATION = Stored personal configuration.
 class.com.top_logic.knowledge.wrap.person.I18NConstants.UPDATED_ACCOUNT_LIST = Updated account list.
 class.com.top_logic.layout.admin.component.I18NConstants.ERROR_NOT_A_GROUP__ELEMENT = The object {0} is not a group.
 class.com.top_logic.layout.component.I18NConstants.DELETED_OBJECT__OBJ = Deleted object: {0}
