Ticket #28604: Implemented undo command.

--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_de.properties
@@ -19,6 +19,8 @@ model.tl.changelog.ChangeSet.author = Author
 model.tl.changelog.ChangeSet.changes = Änderungen
 model.tl.changelog.ChangeSet.date = Datum
 model.tl.changelog.ChangeSet.message = Message
+model.tl.changelog.ChangeSet.parentRev = Ausgangsrevision
+model.tl.changelog.ChangeSet.parentRev.tooltip = Die Revision, welche den Modellzustand repräsentiert, der durch die Änderung modifiziert wird.
 model.tl.changelog.ChangeSet.revision = Revision
 model.tl.changelog.ChangeSet.tooltip = Ein Change-Set fasst alle Änderungen zusammen, die in einer Transaktion vorgenommen wurden. Typischerweise führt eine Aktion im System höchstens eine Transaktion durch. Damit beschreibt ein Change-Set die Änderungen, die von einer atomaren Systemoperation durchgeführt wurden.
 model.tl.changelog.CreateOp = Objektanlage
