--- a/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
+++ b/com.top_logic.element/src/main/webapp/WEB-INF/conf/resources/model.tl.changelog.messages_en.properties
@@ -19,6 +19,8 @@ model.tl.changelog.ChangeSet.author = Author
 model.tl.changelog.ChangeSet.changes = Changes
 model.tl.changelog.ChangeSet.date = Date
 model.tl.changelog.ChangeSet.message = Message
+model.tl.changelog.ChangeSet.parentRev = Parent revision
+model.tl.changelog.ChangeSet.parentRev.tooltip = The revision, which represents the model state that is modified by the change.
 model.tl.changelog.ChangeSet.revision = Revision
 model.tl.changelog.ChangeSet.tooltip = A change set summarizes all changes that were made in a transaction. Typically, an action in the system performs at most one transaction. A change set therefore describes the changes made by an atomic system operation.
 model.tl.changelog.CreateOp = Object instantiation
