Ticket #28604: I18N for revert handler.

--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -153,6 +153,8 @@ com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig = Role rules 
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.rules = Rules
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.rules.tooltip = The list of known role rule configurations.
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.tooltip = <i>Configuration item</i> defining all definitions of role rules in the application.
+com.top_logic.element.changelog.RevertCommandHandler = Revert command handler
+com.top_logic.element.changelog.RevertCommandHandler.tooltip = <i>Command</i> for reverting a <i>change set</i>.
 com.top_logic.element.comment.layout.CommentDialogComponent = Comment dialog component
 com.top_logic.element.comment.layout.CommentDialogComponent$EditCommentHandler = Edit comment handler
 com.top_logic.element.comment.layout.CommentDialogComponent$EditCommentHandler.tooltip = Perform the editing of a comment.
