--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1,7 +1,7 @@
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING = Werte, die auf die Eigenschaft "{1}" des Objekts "{0}" gesetzt wurden, sind nicht mehr verfügbar (inzwischen gelöscht): {2}
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_CREATE_ALREADY_EXISTS__OBJ = Das Objekt, das erstellt werden soll, existiert bereits: {0}
-class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_DELETE_NO_LONGER_EXISTS__OBJ = Das Objekt, das gelöscht werden soll, existiert nicht mehr: {0}
-class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_MODIFY_NO_LONGER_EXISTS__OBJ = Das Objekt, das geändert werden soll, existiert nicht mehr: {0}
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_DELETE_NO_LONGER_EXISTS__OBJ = Das Objekt, das gelöscht werden sollte, existiert nicht mehr: {0}
+class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECT_TO_MODIFY_NO_LONGER_EXISTS__OBJ = Das Objekt, das geändert werden sollte, existiert nicht mehr: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_VALUE_CHANGED_IN_BETWEEN__OBJ_PART_ORIG_CURR = Die Eigenschaft "{1}" des Objekts "{0}" wurde zwischenzeitlich von ihrem ursprünglichen Wert "{2}" auf den neuen Wert "{3}" geändert.
 class.com.top_logic.element.changelog.model.I18NConstants.REDO__MSG = Erneut durchgeführt: {0}
 class.com.top_logic.element.changelog.model.I18NConstants.REVERTED__MSG = Rückgängig gemacht: {0}
@@ -153,6 +153,8 @@ com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig = Rollenregel
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.rules = Regeln
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.rules.tooltip = Die Liste der bekannten Konfigurationen von Rollenregeln.
 com.top_logic.element.boundsec.manager.rule.config.RoleRulesConfig.tooltip = <i>Konfigurationselement</i>, das alle Definitionen von Rollenregeln in der Anwendung definiert.
+com.top_logic.element.changelog.RevertCommandHandler = Änderungen rückgängig machen
+com.top_logic.element.changelog.RevertCommandHandler.tooltip = <i>Befehl</i> zum Rückgängigmachen eines <i>Änderungssatzes</i>.
 com.top_logic.element.comment.layout.CommentDialogComponent = Kommentar-Dialogkomponente
 com.top_logic.element.comment.layout.CommentDialogComponent$EditCommentHandler = Kommentar-Handler bearbeiten
 com.top_logic.element.comment.layout.CommentDialogComponent$EditCommentHandler.tooltip = Führen Sie die Bearbeitung eines Kommentars durch.
