Ticket #28604: Allow to update commit message after transaction start.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -106,6 +106,7 @@ class.com.top_logic.layout.editor.commands.I18NConstants.RELEASED_LAYOUT_CONFIGU
 class.com.top_logic.layout.editor.commands.I18NConstants.RESET_LAYOUT_CONFIG__USER = Reset layout configuration for user "{0}".
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.GROUP_NOT_COLLAPSIBLE = The group can not be collapsed.
 class.com.top_logic.layout.form.boxes.reactive_tag.I18NConstants.TOGGLE = Expand or collapse.
+class.com.top_logic.layout.form.component.I18NConstants.CREATED_OBJECT = Created object.
 class.com.top_logic.layout.form.component.I18NConstants.CREATED__MODEL = Created object: {0}
 class.com.top_logic.layout.form.component.I18NConstants.DELETED__MODEL = Deleted object: {0}
 class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE = Reload
